// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressSteps > snapshots > matches snapshot for config step 1`] = `
<div
  class="progress-steps flex flex-col items-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
          data-active="true"
          data-completed="false"
          data-testid="progress-step-circle-config"
        >
          1
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-ensemble"
        >
          2
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-prompt"
        >
          3
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-review"
        >
          4
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-start mt-2"
  >
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-primary"
      >
        Config
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
      >
        Ensemble
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
      >
        Prompt
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
      >
        Review
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps > snapshots > matches snapshot for ensemble step 1`] = `
<div
  class="progress-steps flex flex-col items-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-config"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
          data-active="true"
          data-completed="false"
          data-testid="progress-step-circle-ensemble"
        >
          2
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-prompt"
        >
          3
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-review"
        >
          4
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-start mt-2"
  >
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
      >
        Config
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-primary"
      >
        Ensemble
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
      >
        Prompt
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
      >
        Review
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps > snapshots > matches snapshot for prompt step 1`] = `
<div
  class="progress-steps flex flex-col items-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-config"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-ensemble"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
          data-active="true"
          data-completed="false"
          data-testid="progress-step-circle-prompt"
        >
          3
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-muted"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
          data-active="false"
          data-completed="false"
          data-testid="progress-step-circle-review"
        >
          4
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-start mt-2"
  >
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
      >
        Config
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
      >
        Ensemble
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-primary"
      >
        Prompt
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-muted-foreground"
      >
        Review
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps > snapshots > matches snapshot for review step 1`] = `
<div
  class="progress-steps flex flex-col items-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-config"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-ensemble"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
          data-active="false"
          data-completed="true"
          data-testid="progress-step-circle-prompt"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="w-16 h-0.5 mx-4 transition-colors bg-success"
      />
    </div>
    <div
      class="flex items-center"
    >
      <div
        data-testid="progress-step-container-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
          data-active="true"
          data-completed="false"
          data-testid="progress-step-circle-review"
        >
          4
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-start mt-2"
  >
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
      >
        Config
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
      >
        Ensemble
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-success"
      >
        Prompt
      </span>
      <div
        class="w-16 mx-4"
      />
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="inline-block w-12 text-center text-sm font-medium transition-colors text-primary"
      >
        Review
      </span>
    </div>
  </div>
</div>
`;
